--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -25,6 +25,5 @@ jobs:
       - uses: actions/checkout@v2
       - uses: papeloto/action-zip@v1
       with:
-        files: surge-skins/surge-xt/modern-dark-xt.surge-skin
+        files: surge-skins/surge-xt/modern-dark-xt.surge-skin/
         dest: modern-dark.zip
-        recursive: true
