--- a/.github/workflows/zip-files.yml
+++ b/.github/workflows/zip-files.yml
@@ -4,13 +4,13 @@ on: [push]
 
 jobs:
 
-  zip-files:
-    name: Zip Files
+  Zip-Files:
     runs-on: ubuntu-latest
     steps:
-      - name: Zip Files
-      - uses: actions/checkout@v3
-      - uses: vimtor/action-zip@v1
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Zip
+        uses: vimtor/action-zip@v1
         with:
-          files: surge-skins/surge-xt/modern-dark-xt.surge-skin/
+          files: surge-skins/surge-xt/modern-dark-xt.surge-skin
           dest: modern-dark.zip
