--- a/.github/workflows/zip-files.yml
+++ b/.github/workflows/zip-files.yml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
 
-  Zip-Files:
+  Zip-Modern-Dark:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -14,5 +14,14 @@ jobs:
         with:
           files: surge-skins/surge-xt/modern-dark-xt.surge-skin
           dest: modern-dark.zip
+
+  Zip-Modern-Dark-Blue:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Zip
+        uses: vimtor/action-zip@v1
+        with:
           files: surge-skins/surge-xt/modern-dark-blue-xt.surge-skin
           dest: modern-dark-blue.zip
