--- a/.github/workflows/zip-files.yml
+++ b/.github/workflows/zip-files.yml
@@ -25,3 +25,14 @@ jobs:
         with:
           files: surge-skins/surge-xt/modern-dark-blue-xt.surge-skin
           dest: modern-dark-blue.zip
+
+  Zip-Modern-Dark-Purple:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Zip
+        uses: vimtor/action-zip@v1
+        with:
+          files: surge-skins/surge-xt/dark-purple-xt.surge-skin
+          dest: dark-purple.zip
