--- a/.github/workflows/zip-files.yml
+++ b/.github/workflows/zip-files.yml
@@ -21,7 +21,7 @@ jobs:
         uses: vimtor/action-zip@v1
         with:
           files: surge-skins/surge-xt/modern-dark-xt.surge-skin
-          dest: modern-dark.zip
+          dest: skins/modern-dark.zip
 
   Zip-Modern-Dark-Blue:
     runs-on: ubuntu-latest
@@ -30,7 +30,7 @@ jobs:
         uses: vimtor/action-zip@v1
         with:
           files: surge-skins/surge-xt/modern-dark-blue-xt.surge-skin
-          dest: modern-dark-blue.zip
+          dest: skins/modern-dark-blue.zip
 
   Zip-Modern-Dark-Purple:
     runs-on: ubuntu-latest
@@ -39,7 +39,7 @@ jobs:
         uses: vimtor/action-zip@v1
         with:
           files: surge-skins/surge-xt/dark-purple-xt.surge-skin
-          dest: dark-purple.zip
+          dest: skins/dark-purple.zip
 
   Publish:
     runs-on: ubuntu-latest
