--- a/.github/workflows/zip-files.yml
+++ b/.github/workflows/zip-files.yml
@@ -13,6 +13,8 @@ jobs:
   Zip-Modern-Dark:
     runs-on: ubuntu-latest
     steps:
+      - name: List files in the repository
+        run: ls
       - name: Publish
         uses: actions/upload-artifact@v3
         with:
