--- a/.github/workflows/zip-files.yml
+++ b/.github/workflows/zip-files.yml
@@ -23,4 +23,5 @@ jobs:
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
+          name: surge-skins
           files: modern-dark
