--- a/.github/workflows/zip-files.yml
+++ b/.github/workflows/zip-files.yml
@@ -1,6 +1,9 @@
 name: Zip Files
 
-on: [push]
+on: 
+  push:
+    tags:
+      - "release"
 
 permissions:
   contents: write
@@ -21,7 +24,6 @@ jobs:
           path: surge-skins/surge-xt/modern-dark-xt.surge-skin
       - name: Release
         uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
         with:
           name: surge-skins
           files: modern-dark
