--- a/.github/workflows/zip-files.yml
+++ b/.github/workflows/zip-files.yml
@@ -1,9 +1,6 @@
 name: Zip Files
 
-on: 
-  push:
-    tags:
-      - "release"
+on: [push]
 
 permissions:
   contents: write
@@ -24,6 +21,4 @@ jobs:
           path: surge-skins/surge-xt/modern-dark-xt.surge-skin
       - name: Release
         uses: softprops/action-gh-release@v1
-        with:
-          name: surge-skins
-          files: modern-dark
+        if: startsWith(github.ref, 'refs/tags/')
