--- a/.github/workflows/zip-files.yml
+++ b/.github/workflows/zip-files.yml
@@ -22,3 +22,5 @@ jobs:
       - name: Release
         uses: softprops/action-gh-release@v0.1.14
         if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: modern-dark
