--- a/.github/workflows/zip-files.yml
+++ b/.github/workflows/zip-files.yml
@@ -1,6 +1,9 @@
 name: Zip Files
 
-on: [push]
+on:
+  push:
+    tags:
+      - '*'
 
 permissions:
   contents: write
@@ -12,15 +15,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: List files
-        run: ls ${{ github.workspace }}
       - name: Upload
         uses: actions/upload-artifact@v3
         with:
           name: modern-dark
           path: surge-skins/surge-xt/modern-dark-xt.surge-skin
       - name: Release
-        uses: softprops/action-gh-release@v0.1.14
-        if: startsWith(github.ref, 'refs/tags/')
+        uses: ncipollo/release-action@v1.10.0
         with:
-          files: modern-dark
+          artifacts: "modern-dark"
+          token: ${{ secrets.GITHUB_TOKEN }}
