--- a/.github/workflows/zip-files.yml
+++ b/.github/workflows/zip-files.yml
@@ -23,4 +23,4 @@ jobs:
       - name: Release
         uses: softprops/action-gh-release@v0.1.14
         with:
-          files: modern-dark.zip
+          files: modern-dark
