--- a/.github/workflows/zip-files.yml
+++ b/.github/workflows/zip-files.yml
@@ -21,8 +21,7 @@ jobs:
           name: modern-dark
           path: surge-skins/surge-xt/modern-dark-xt.surge-skin
       - name: List files in the repository
-        run: |
-        ls ${{ github.workspace }}
+        run: ls ${{ github.workspace }}
       - name: Release
         uses: softprops/action-gh-release@v0.1.14
         with:
