--- a/.github/workflows/zip-files.yml
+++ b/.github/workflows/zip-files.yml
@@ -13,6 +13,10 @@ jobs:
   Zip-Modern-Dark:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: List
+        run: ls ${{ github.workspace }}
       - name: Zip
         uses: vimtor/action-zip@v1
         with:
