--- a/.github/workflows/zip-files.yml
+++ b/.github/workflows/zip-files.yml
@@ -50,6 +50,7 @@ jobs:
         uses: softprops/action-gh-release@v0.1.14
         with:
           files: |
+            stochas-skins.zip
             modern-dark.zip
             modern-dark-blue.zip
             dark-purple.zip
