--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,7 +44,7 @@ jobs:
           dest: dark-purple.zip
 
       - name: Release Notes
-        run: git --no-pager log -5 --oneline --no-decorate >> release_notes.md
+        run: git --no-pager log -5 --oneline --no-decorate > release_notes.md
 
       - name: Read Release Notes
         run: cat release_notes.md
