--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,6 +44,9 @@ jobs:
           dest: dark-purple.zip
 
       - name: Release Notes
+        run: git --no-pager log -5 --oneline --no-decorate
+
+      - name: Release Notes
         run: git --no-pager log -5 --oneline --no-decorate > release_notes.md
 
       - name: Read Release Notes
