--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -62,6 +62,8 @@ jobs:
 
       - name: Release
         uses: softprops/action-gh-release@v0.1.14
+        tag-name: Skins
+        name: Surge & Stochas Skins
         with:
           body_path: release_notes.md
           files: |
