--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -71,4 +71,4 @@ jobs:
             modern-dark.zip
             modern-dark-blue.zip
             dark-purple.zip
-            stochas-skins-tar.zip
+            stochas-skins-test.zip
