--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -62,7 +62,7 @@ jobs:
 
       - name: Release
         uses: softprops/action-gh-release@v0.1.14
-        tag-name: Skins
+        tag_name: Skins
         name: Surge & Stochas Skins
         with:
           body_path: release_notes.md
