--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,16 +7,13 @@ permissions:
 
 jobs:
 
-  Zip-Modern-Dark:
+  Release:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
         with:
           fetch-depth: 5
-
-      - name: List Files
-        run: ls ${{ github.workspace }}
 
       - name: Zip Stochas
         run: zip -r stochas-skins.zip stochas-skins
@@ -31,16 +28,7 @@ jobs:
         run: zip -r dark-purple.zip surge-skins/surge-xt/dark-purple-xt.surge-skin
 
       - name: Release Notes
-        run: git --no-pager log -5 --oneline --no-decorate
-
-      - name: Release Notes
-        run: git --no-pager log -5 --oneline --no-decorate > release_notes.md
-
-      - name: Read Release Notes
-        run: cat release_notes.md
-
-      - name: List Files
-        run: ls ${{ github.workspace }}
+        run: git --no-pager log -1 --oneline --no-decorate > release_notes.md
 
       - name: Release
         uses: softprops/action-gh-release@v0.1.14
