--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,14 +28,14 @@ jobs:
         run: zip -r dark-purple.zip surge-skins/surge-xt/dark-purple-xt.surge-skin
 
       - name: Release Notes
-        run: git --no-pager log -3 --oneline --no-decorate > release_notes.md
+        run: git --no-pager log -3 --oneline --no-decorate > gitlog.md
 
       - name: Release
         uses: softprops/action-gh-release@v0.1.14
         with:
-          tag_name: skins
-          name: Surge & Stochas Skins
-          body_path: release_notes.md
+          tag_name: latest
+          name: Download
+          body_path: gitlog.md
           files: |
             stochas-skins.zip
             modern-dark.zip
