--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          fetch-depth: 3
+          fetch-depth: 5
 
       - name: Zip Stochas
         run: zip -r stochas-skins.zip stochas-skins
@@ -28,10 +28,10 @@ jobs:
         run: zip -r dark-purple.zip surge-skins/surge-xt/dark-purple-xt.surge-skin
 
       - name: Release Notes Header
-        run: echo -e "Release Notes:\n" > release_notes.md
+        run: echo -e "Changes:\n" > release_notes.md
 
       - name: Release Notes
-        run: git --no-pager log -3 --oneline --no-decorate >> release_notes.md
+        run: git --no-pager log -5 --oneline --no-decorate >> release_notes.md
 
       - name: Release
         uses: softprops/action-gh-release@v0.1.14
