--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,18 +27,18 @@ jobs:
       - name: Zip Dark Purple
         run: zip -r dark-purple.zip surge-skins/surge-xt/dark-purple-xt.surge-skin
 
-      - name: Release Notes Header
+      - name: Changes
         run: echo -e "Changes:\n" > release_notes.md
 
-      - name: Release Notes
-        run: git --no-pager log -5 --oneline --no-decorate >> release_notes.md
+      - name: Git Log
+        run: git --no-pager log -5 --oneline --no-decorate >> changes.md
 
       - name: Release
         uses: softprops/action-gh-release@v0.1.14
         with:
           tag_name: latest
           name: Downloads
-          body_path: release_notes.md
+          body_path: changes.md
           files: |
             stochas-skins.zip
             modern-dark.zip
