--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,7 +28,7 @@ jobs:
         run: zip -r dark-purple.zip surge-skins/surge-xt/dark-purple-xt.surge-skin
 
       - name: Changes
-        run: echo -e "Changes:\n" > release_notes.md
+        run: echo -e "Changes:\n" > changes.md
 
       - name: Git Log
         run: git --no-pager log -5 --oneline --no-decorate >> changes.md
