--- a/.github/workflows/svgo.yml
+++ b/.github/workflows/svgo.yml
@@ -17,8 +17,10 @@ jobs:
           submodules: recursive
 
       - name: SVGO
-        run: cd surge-skins/surge-xt/ && npx svgo */SVG
-
+        run: cd surge-skins/surge-xt/ && npx svgo */SVG && cd ../
 
       - name: Artifact
         uses: actions/upload-artifact@v3
+        with:
+          name: skins
+          path: surge-xt/*
