--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,7 +37,7 @@ jobs:
         run: git config --global user.email "mthierman@gmail.com" && git config --global user.name "Mike Thierman"
 
       - name: Git
-        run: git commit -am 'SVGO Compression' || true && git push
+        run: git commit -am 'SVGO Compression' || true && git push || true
 
       - name: Zip Stochas
         run: zip -r stochas-skins.zip stochas-skins
